--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body ng-app="TenderTummies">
 	<header>
+		<div class="topLine"></div>
 		<div ng-include="'partials/navbar.html'"></div>
 	</header>
 	<main>
