playing with adding a user inserted gender

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		<div ng-view></div>
 	</main>
 	<footer>
-		copyright stuff
+		<div class="footer-copyright">
+      © 2017 Eliza W Meeks
+    </div>
 	</footer>
 
 <!-- 3rd Party JS -->
