--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Tender Tummies</title>
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/materialize-css/dist/css/materialize.min.css">
+	<link rel="stylesheet" type="text/css" href="lib/node_modules/materialize-clockpicker/dist/css/materialize.clockpicker.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
@@ -26,6 +27,7 @@
 <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/materialize-css/dist/js/materialize.min.js"></script>
+<script type="text/javascript" src="lib/node_modules/materialize-clockpicker/dist/js/materialize.clockpicker.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/firebase/firebase.js"></script>
 
