got pdf working teh way i want it to

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <script type="text/javascript" src="lib/node_modules/materialize-clockpicker/dist/js/materialize.clockpicker.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
 <script type="text/javascript" src="lib/node_modules/firebase/firebase.js"></script>
+<script type="text/javascript" src="lib/bower_components/pdfmake/build/pdfmake.min.js"></script>
+<script type="text/javascript" src="lib/bower_components/pdfmake/build/vfs_fonts.js"></script>
 
 <!-- mine mine mine -->
 <script type="text/javascript" src="dist/app.js"></script>
