--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" href="img/logo-blue	.png" type="image/x-icon">
 	<title>Tender Tummies</title>
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="img/logo-blue	.png" type="image/x-icon">
+	<!-- Materialize, Angular Materialize, and Materialize Clockpicker -->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/materialize-css/dist/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="lib/node_modules/materialize-clockpicker/dist/css/materialize.clockpicker.css">
+	<!-- App specific CSS -->
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
@@ -31,7 +34,7 @@
 <script type="text/javascript" src="lib/bower_components/pdfmake/build/pdfmake.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/pdfmake/build/vfs_fonts.js"></script>
 
-<!-- mine mine mine -->
+<!-- App specific JS -->
 <script type="text/javascript" src="dist/app.js"></script>
 
 </body>
